--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,23 @@
+aiosqlite==0.22.1
 annotated-types==0.7.0
 anyio==4.12.1
+asyncpg==0.31.0
 certifi==2026.1.4
 charset-normalizer==3.4.4
 click==8.3.1
 dateparser==1.2.2
 distro==1.9.0
+greenlet==3.3.1
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
 idna==3.11
 iniconfig==2.3.0
 isort==7.0.0
+Jinja2==3.1.6
 jiter==0.12.0
 logger==1.4
+MarkupSafe==3.0.3
 mccabe==0.7.0
 mypy_extensions==1.1.0
 openai==2.16.0
@@ -41,6 +46,7 @@ requests==2.32.5
 rsa==4.9.1
 six==1.17.0
 sniffio==1.3.1
+SQLAlchemy==2.0.46
 Telethon==1.42.0
 tqdm==4.67.2
 typing-inspection==0.4.2
