--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,7 +26,7 @@ services:
     #   db:
     #     condition: service_healthy
     env_file:
-      - .env
+      - prod.env
     volumes:
       - .:/app
       - ./logs:/app/logs
